# P1_improved

./: .gitignore  CMakeLists.txt  README.md
pbPlots/: CMakeLists.txt
src/: CMakeLists.txt  Welfare_Score.c  america.c  america.h  borda.c  borda.h  calculate_winner.c  calculate_winner.h  convert.c  convert.h  main.c  realistic_appropriation.c  realistic_appropriation.h  schulze.c  static_variables.h  vote_generation.c  vote_generation.h  welfare_score.c  welfare_score.h
src/h-filer/: NOTUSED_vote_generation.h  america.h  borda.h  calculate_winner.h  convert.h  impartial_generation.h  main.h  realistic_appropriation.h  static_variables.h  valgsystemer.h  welfare_score.h
src/logiske-funktioner/: NOTUSED_vote_generation.c  calculate_winner.c  convert.c  impartial_generation.c  realistic_appropriation.c  simulering.c  utils.c  welfare_score.c
src/valgsystemer/: america.c  borda.c
test/: CMakeLists.txt  test.c  test.txt  test1.txt  test2.txt  test3.txt  test4.txt
text-files/: impartial-file.txt  notused.txt  spatial-file.txt  test-tekstil.txt
